--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Amit-deployment
+  name: amit-deployment
   labels:
     app: new
 spec:
@@ -15,7 +15,7 @@ spec:
         app: new
     spec:
       containers:
-      - name: Amit-container
+      - name: amit-container
         image: amitmishra220/image1:latest
         ports:
         - containerPort: 80
